--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,6 @@ services:
       - 5432:5432
     environment:
       - POSTGRES_PASSWORD=admin
-      - POSTGRES_USER=postgres
+      - POSTGRES_USER=survey
       - POSTGRES_DB=surveys
     restart: unless-stopped
