--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: java
+node_js:
+  — "13.1.0"
+
 jdk:
   - openjdk8
 
@@ -10,6 +13,8 @@ branches:
     - master
 
 before_script:
+  - npm install
+  - npm install -g ionic
   - psql -c "CREATE DATABASE surveys;" -U postgres
   - psql -c "CREATE USER survey WITH PASSWORD 'admin';" -U postgres
 
@@ -18,3 +23,8 @@ jobs:
   include:
     - stage: build app and test
       script: mvn clean install
+    - stage: build ui
+      script:
+        - cd ui
+        - npm ci
+        - ionic build --prod -- --base-href ./
