--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<lombok.version>1.18.12</lombok.version>
 	</properties>
 
 	<dependencies>
