Refactoring, mainly for user and grou- post/get/delete tested for group and user on swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#profile - dev/test/prod, for example swagger is disabled on prod
+spring.profiles.active=dev
+
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
@@ -11,3 +14,5 @@ spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
+#set to false if you don't wish to see SQLs in logs
+spring.jpa.show-sql=true
