--- a/ui/firebase.json
+++ b/ui/firebase.json
@@ -1,7 +1,7 @@
 {
   "hosting": {
     "public": "www",
-    "site": "app-firebase-started",
+    "site": "app-survey-time",
     "ignore": [
       "firebase.json",
       "**/.*",
