--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,8 @@ jobs:
   include:
     - stage: build app and test
       script: mvn clean install
-    - stage: build ui
-      script:
-        - cd ui
-        - npm ci
-        - ionic build --prod -- --base-href ./
+#    - stage: build ui
+#      script:
+#        - cd ui
+#        - npm ci
+#        - ionic build --prod -- --base-href ./
