--- a/ui/package.json
+++ b/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Survey Time!",
+  "name": "survey-time",
   "version": "0.0.1",
   "author": "Aggressive Sureys Team",
   "scripts": {
