--- a/dev-script/docker-compose.yml
+++ b/dev-script/docker-compose.yml
@@ -28,9 +28,12 @@ services:
     links:
       - postgres
   ui:
-    image:  ui:v3
+    image:  ui:v6
     container_name: ui-surveys
     network_mode: bridge
+    volumes:
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
     expose:
       - 8100
     ports:
